tests/constant_condition/constant_condition.exp
Error ------------------------------------------------------------------------------------- err1/boolean_literal.js:4:13

This condition is likely truthy.
[WARNING]: Flow's type inference may be incorrect that it could be null at runtime (due to `any` annotations,
out-of-bounds array accesses, etc.). If the check is valid, you might want to make [1] nullable (`T` -> `?T`).
[constant-condition]

   err1/boolean_literal.js:4:13
   4|         if (x) {} // error, x is refined to `true`
                  ^

References:
   err1/boolean_literal.js:2:20
   2|     declare var x: boolean;
                         ^^^^^^^ [1]


Error ------------------------------------------------------------------------------------- err1/boolean_literal.js:8:13

This condition is likely falsy.
[WARNING]: Flow's type inference may be incorrect that it could be null at runtime (due to `any` annotations,
out-of-bounds array accesses, etc.). If the check is valid, you might want to make [1] nullable (`T` -> `?T`).
[constant-condition]

   err1/boolean_literal.js:8:13
   8|         if (x) {} // error, x is refined to `false`
                  ^

References:
   err1/boolean_literal.js:2:20
   2|     declare var x: boolean;
                         ^^^^^^^ [1]


Error ------------------------------------------------------------------------------------------- err1/null_void.js:4:13

This condition is likely falsy.
[WARNING]: Flow's type inference may be incorrect that it could be null at runtime (due to `any` annotations,
out-of-bounds array accesses, etc.). If the check is valid, you might want to make the type of this expression nullable
(`T` -> `?T`). [constant-condition]

   4|         if (x) {} // error, x is refined to `null | void`
                  ^


Error -------------------------------------------------------------------------------------------- err1/null_void.js:8:9

This condition is likely falsy.
[WARNING]: Flow's type inference may be incorrect that it could be null at runtime (due to `any` annotations,
out-of-bounds array accesses, etc.). If the check is valid, you might want to make [1] nullable (`T` -> `?T`).
[constant-condition]

   err1/null_void.js:8:9
   8|     if (y) {} // error, y is undefined
              ^

References:
   err1/null_void.js:7:9
   7|     let y: Array<number>;
              ^ [1]


Error ------------------------------------------------------------------------------------- err2/boolean_literal.js:4:13

This condition is likely truthy.
[WARNING]: Flow's type inference may be incorrect that it could be null at runtime (due to `any` annotations,
out-of-bounds array accesses, etc.). If the check is valid, you might want to make [1] nullable (`T` -> `?T`).
[constant-condition]

   err2/boolean_literal.js:4:13
   4|         if (x) {} // error, x is refined to `true`
                  ^

References:
   err2/boolean_literal.js:2:20
   2|     declare var x: boolean;
                         ^^^^^^^ [1]


Error ------------------------------------------------------------------------------------- err2/boolean_literal.js:8:13

This condition is likely falsy.
[WARNING]: Flow's type inference may be incorrect that it could be null at runtime (due to `any` annotations,
out-of-bounds array accesses, etc.). If the check is valid, you might want to make [1] nullable (`T` -> `?T`).
[constant-condition]

   err2/boolean_literal.js:8:13
   8|         if (x) {} // error, x is refined to `false`
                  ^

References:
   err2/boolean_literal.js:2:20
   2|     declare var x: boolean;
                         ^^^^^^^ [1]


Error ------------------------------------------------------------------------------------------- err2/null_void.js:4:13

This condition is likely falsy.
[WARNING]: Flow's type inference may be incorrect that it could be null at runtime (due to `any` annotations,
out-of-bounds array accesses, etc.). If the check is valid, you might want to make the type of this expression nullable
(`T` -> `?T`). [constant-condition]

   4|         if (x) {} // error, x is refined to `null | void`
                  ^


Error -------------------------------------------------------------------------------------------- err2/null_void.js:8:9

This condition is likely falsy.
[WARNING]: Flow's type inference may be incorrect that it could be null at runtime (due to `any` annotations,
out-of-bounds array accesses, etc.). If the check is valid, you might want to make [1] nullable (`T` -> `?T`).
[constant-condition]

   err2/null_void.js:8:9
   8|     if (y) {} // error, y is undefined
              ^

References:
   err2/null_void.js:7:9
   7|     let y: Array<number>;
              ^ [1]


Error ---------------------------------------------------------------------------------------------- null_literal.js:2:9

This condition is falsy. [constant-condition]

   2|     if (null) {} // ERROR
              ^^^^


Error ---------------------------------------------------------------------------------------------- null_literal.js:5:9

This condition is falsy. [constant-condition]

   5|     x = null ? 5 : 6; // ERROR
              ^^^^


Error ---------------------------------------------------------------------------------------------- null_literal.js:7:5

This condition is falsy. [constant-condition]

   7|     null && 5; // ERROR
          ^^^^


Error ---------------------------------------------------------------------------------------------- null_literal.js:9:5

This condition is falsy. [constant-condition]

   9|     null || 5; // ERROR
          ^^^^


Error --------------------------------------------------------------------------------------------- null_literal.js:11:5

This condition is falsy. [constant-condition]

   11|     null ?? 5; // ERROR
           ^^^^


Error -------------------------------------------------------------------------------------------- string_literal.js:2:9

This condition is falsy. [constant-condition]

   2|     if ('') {} // ERROR
              ^^


Error -------------------------------------------------------------------------------------------- string_literal.js:3:9

This condition is truthy. [constant-condition]

   3|     if ('\'') {} // ERROR
              ^^^^


Error -------------------------------------------------------------------------------------------- string_literal.js:4:9

This condition is truthy. [constant-condition]

   4|     if ('a') {} // ERROR
              ^^^


Error -------------------------------------------------------------------------------------------- string_literal.js:5:9

This condition is truthy. [constant-condition]

   5|     if ('hfudiashfkdsnfsa') {} // ERROR
              ^^^^^^^^^^^^^^^^^^


Error -------------------------------------------------------------------------------------------- string_literal.js:8:9

This condition is falsy. [constant-condition]

   8|     x = '' ? 5 : 6; // ERROR
              ^^


Error -------------------------------------------------------------------------------------------- string_literal.js:9:9

This condition is truthy. [constant-condition]

   9|     x = '\'' ? 5 : 6; // ERROR
              ^^^^


Error ------------------------------------------------------------------------------------------- string_literal.js:10:9

This condition is truthy. [constant-condition]

   10|     x = 'a' ? 5 : 6; // ERROR
               ^^^


Error ------------------------------------------------------------------------------------------- string_literal.js:11:9

This condition is truthy. [constant-condition]

   11|     x = 'fdsgfdgsfdga' ? 5 : 6; // ERROR
               ^^^^^^^^^^^^^^


Error ------------------------------------------------------------------------------------------- string_literal.js:13:5

This condition is falsy. [constant-condition]

   13|     '' && 5; // ERROR
           ^^


Error ------------------------------------------------------------------------------------------- string_literal.js:14:5

This condition is truthy. [constant-condition]

   14|     '\'' && 5; // ERROR
           ^^^^


Error ------------------------------------------------------------------------------------------- string_literal.js:15:5

This condition is truthy. [constant-condition]

   15|     'a' && 5; // ERROR
           ^^^


Error ------------------------------------------------------------------------------------------- string_literal.js:16:5

This condition is truthy. [constant-condition]

   16|     'fdsgfdgsfdga' && 5; // ERROR
           ^^^^^^^^^^^^^^


Error ------------------------------------------------------------------------------------------- string_literal.js:18:5

This condition is falsy. [constant-condition]

   18|     '' || 5; // ERROR
           ^^


Error ------------------------------------------------------------------------------------------- string_literal.js:19:5

This condition is truthy. [constant-condition]

   19|     '\'' || 5; // ERROR
           ^^^^


Error ------------------------------------------------------------------------------------------- string_literal.js:20:5

This condition is truthy. [constant-condition]

   20|     'a' || 5; // ERROR
           ^^^


Error ------------------------------------------------------------------------------------------- string_literal.js:21:5

This condition is truthy. [constant-condition]

   21|     'fdsgfdgsfdga' || 5; // ERROR
           ^^^^^^^^^^^^^^


Error ------------------------------------------------------------------------------------------- string_literal.js:23:5

This condition is falsy. [constant-condition]

   23|     '' ?? 5; // ERROR
           ^^


Error ------------------------------------------------------------------------------------------- string_literal.js:24:5

This condition is truthy. [constant-condition]

   24|     '\'' ?? 5; // ERROR
           ^^^^


Error ------------------------------------------------------------------------------------------- string_literal.js:25:5

This condition is truthy. [constant-condition]

   25|     'a' ?? 5; // ERROR
           ^^^


Error ------------------------------------------------------------------------------------------- string_literal.js:26:5

This condition is truthy. [constant-condition]

   26|     'fdsgfdgsfdga' ?? 5; // ERROR
           ^^^^^^^^^^^^^^


Error ------------------------------------------------------------------------------------------------------ test.js:4:7

This condition is falsy. [constant-condition]

   4|   if ('') {} // ERROR
            ^^


Error ------------------------------------------------------------------------------------------------------ test.js:5:7

This condition is truthy. [constant-condition]

   5|   if ('\'') {} // ERROR
            ^^^^


Error ------------------------------------------------------------------------------------------------------ test.js:6:7

This condition is truthy. [constant-condition]

   6|   if ('a') {} // ERROR
            ^^^


Error ------------------------------------------------------------------------------------------------------ test.js:8:6

This condition is truthy. [constant-condition]

   8|   if('a' || 'b') {} // ERROR
           ^^^


Error ------------------------------------------------------------------------------------------------------ test.js:8:6

This condition is truthy. [constant-condition]

   8|   if('a' || 'b') {} // ERROR
           ^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------------- test.js:10:3

This condition is falsy. [constant-condition]

   10|   '' ? 1 : 2; // ERROR
         ^^


Error ----------------------------------------------------------------------------------------------------- test.js:11:3

This condition is truthy. [constant-condition]

   11|   'a' ? 1 : 2; // ERROR
         ^^^


Error ----------------------------------------------------------------------------------------------------- test.js:12:3

This condition is falsy. [constant-condition]

   12|   '' || 1; // ERROR
         ^^


Error ----------------------------------------------------------------------------------------------------- test.js:13:3

This condition is falsy. [constant-condition]

   13|   '' && 1; // ERROR
         ^^


Error ----------------------------------------------------------------------------------------------------- test.js:14:3

This condition is truthy. [constant-condition]

   14|   'a' && 1; // ERROR
         ^^^


Error ----------------------------------------------------------------------------------------------------- test.js:15:3

This condition is falsy. [constant-condition]

   15|   '' ?? 1; // ERROR
         ^^


Error ----------------------------------------------------------------------------------------------------- test.js:16:3

This condition is truthy. [constant-condition]

   16|   'a' ?? 1; // ERROR
         ^^^


Error ----------------------------------------------------------------------------------------------------- test.js:18:8

This condition is truthy. [constant-condition]

   18|   if (('a'?1:2)||3) {} // ERROR
              ^^^


Error ----------------------------------------------------------------------------------------------------- test.js:19:8

This condition is truthy. [constant-condition]

   19|   if (('a'?1:2)&&3) {} // ERROR
              ^^^


Error ----------------------------------------------------------------------------------------------------- test.js:20:8

This condition is truthy. [constant-condition]

   20|   if (('a'?1:2)??3) {} // ERROR
              ^^^


Error ----------------------------------------------------------------------------------------------------- test.js:25:7

This condition is truthy. [constant-condition]

   25|   if ('a' && x) {} // ERROR
             ^^^


Error ----------------------------------------------------------------------------------------------------- test.js:36:6

This condition is falsy. [constant-condition]

   36|   if(null) {} // ERROR
            ^^^^


Error ----------------------------------------------------------------------------------------------------- test.js:37:3

This condition is falsy. [constant-condition]

   37|   null ? 1 : 2; // ERROR
         ^^^^


Error ----------------------------------------------------------------------------------------------------- test.js:43:7

This condition is truthy. [constant-condition]

   43|   if (2) {} // ERROR
             ^


Error ----------------------------------------------------------------------------------------------------- test.js:47:7

This condition is truthy. [constant-condition]

   47|   if (2n) {} // ERROR
             ^^


Error ----------------------------------------------------------------------------------------------------- test.js:53:7

This condition is truthy. [constant-condition]

   53|   if (-2) {} // ERROR
             ^^


Error ----------------------------------------------------------------------------------------------------- test.js:57:7

This condition is truthy. [constant-condition]

   57|   if (-2n) {} // ERROR
             ^^^


Error ----------------------------------------------------------------------------------------------------- test.js:59:7

This condition is falsy. [constant-condition]

   59|   if (void 6) {} // ERROR
             ^^^^^^


Error ----------------------------------------------------------------------------------------------------- test.js:60:7

This condition is truthy. [constant-condition]

   60|   if (typeof 'aaa') {} // ERROR
             ^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------------- test.js:65:7

This condition is truthy. [constant-condition]

   65|   if (/hello/) {} // ERROR
             ^^^^^^^


Error ----------------------------------------------------------------------------------------------------- test.js:71:6

This condition is truthy. [constant-condition]

   71|   if(2 as number) {} // ERROR
            ^


Error ----------------------------------------------------------------------------------------------------- test.js:72:6

This condition is truthy. [constant-condition]

   72|   if(3 as any) {} // ERROR
            ^


Error ----------------------------------------------------------------------------------------------------- test.js:76:6

This condition is truthy. [constant-condition]

   76|   if([0]) {} // ERROR
            ^^^


Error ----------------------------------------------------------------------------------------------------- test.js:77:6

This condition is truthy. [constant-condition]

   77|   if([0,1,2]) {} // ERROR
            ^^^^^^^


Error ----------------------------------------------------------------------------------------------------- test.js:81:6

This condition is truthy. [constant-condition]

   81|   if(new Set<string>()) {} // ERROR
            ^^^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------------- test.js:82:6

This condition is truthy. [constant-condition]

   82|   if(new Set([0])) {} // ERROR
            ^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------------- test.js:83:6

This condition is truthy. [constant-condition]

   83|   if(new Set([1])) {} // ERROR
            ^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------------- test.js:84:6

This condition is truthy. [constant-condition]

   84|   if(new Set([2])) {} // ERROR
            ^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------------- test.js:91:8

This condition is truthy. [constant-condition]

   91|   if(x=2) {} // ERROR
              ^


Error ----------------------------------------------------------------------------------------------------- test.js:94:5

This condition is truthy. [constant-condition]

   94|   x=2 ? 1 : 2; // ERROR
           ^


Error --------------------------------------------------------------------------------------------------- test.js:102:14

This condition is truthy. [constant-condition]

   102|   if ((x,x,x,2)) {} // ERROR
                     ^


Error --------------------------------------------------------------------------------------------------- test.js:103:12

This condition is truthy. [constant-condition]

   103|   if ((0,0,()=>0)) {} // ERROR
                   ^^^^^


Error --------------------------------------------------------------------------------------------------- test.js:106:13

This condition is truthy. [constant-condition]

   106|   if((0,1,2,'a'?f():3)) {} // ERROR
                    ^^^


Error ---------------------------------------------------------------------------------------------------- test.js:108:5

This condition is truthy. [constant-condition]

   108|     'a'?f():3, // ERROR
            ^^^


Error ---------------------------------------------------------------------------------------------------- test.js:109:5

This condition is truthy. [constant-condition]

   109|     2) // ERROR
            ^


Error ---------------------------------------------------------------------------------------------------- test.js:112:5

This condition is truthy. [constant-condition]

   112|     'a'?f():3, // ERROR
            ^^^


Error ---------------------------------------------------------------------------------------------------- test.js:118:6

This condition is truthy. [constant-condition]

             v
   118|   if({
   119|     a: 1,
   120|     b: 2,
   121|   }){} // ERROR
          ^


Error ---------------------------------------------------------------------------------------------------- test.js:125:6

This condition is truthy. [constant-condition]

   125|   if(function(num: number){return num%2===0}) {} // ERROR
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------------------- test.js:128:6

This condition is truthy. [constant-condition]

   128|   if((a:number) => a%2===0) {} // ERROR
             ^^^^^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------------------- test.js:133:7

This condition is truthy. [constant-condition]

   133|   if (`I'm TemplateLiteral`) {} // ERROR
              ^^^^^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------------------- test.js:137:7

This condition is truthy. [constant-condition]

   137|   if (<div>true</div>) {} // ERROR
              ^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------------------- test.js:138:7

This condition is truthy. [constant-condition]

   138|   if (<div>false</div>) {} // ERROR
              ^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------------------- test.js:139:7

This condition is truthy. [constant-condition]

   139|   if (<>true</>) {} // ERROR
              ^^^^^^^^^


Error ---------------------------------------------------------------------------------------------------- test.js:140:7

This condition is truthy. [constant-condition]

   140|   if (<>false</>) {} // ERROR
              ^^^^^^^^^^


Error ---------------------------------------------------------------------------------------------------- test.js:144:6

This condition is truthy. [constant-condition]

   144|   if(class A {}){} // ERROR
             ^^^^^^^^^^


Error --------------------------------------------------------------------------------------------------- test.js:148:11

This condition is truthy. [constant-condition]

   148|       if (yield i) {} // ERROR
                  ^^^^^^^


Error ---------------------------------------------------------------------------------------------------- test.js:154:8

This condition is truthy. [constant-condition]

   154|   if ((('a'?2:3)?4:5)) {} // ERROR
               ^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------------------- test.js:154:9

This condition is truthy. [constant-condition]

   154|   if ((('a'?2:3)?4:5)) {} // ERROR
                ^^^


Error ---------------------------------------------------------------------------------------------------- test.js:154:9

This condition is truthy. [constant-condition]

   154|   if ((('a'?2:3)?4:5)) {} // ERROR
                ^^^^^^^


Error ---------------------------------------------------------------------------------------------------- test.js:155:7

This condition is truthy. [constant-condition]

   155|   if ((true?2:3)?4:5) {} // ERROR
              ^^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------------------- test.js:155:8

This condition is truthy. [constant-condition]

   155|   if ((true?2:3)?4:5) {} // ERROR
               ^^^^^^^^


Error ---------------------------------------------------------------------------------------------------- test.js:156:7

This condition is truthy. [constant-condition]

   156|   if ((false?2:3)?4:5) {} // ERROR
              ^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------------------- test.js:156:8

This condition is truthy. [constant-condition]

   156|   if ((false?2:3)?4:5) {} // ERROR
               ^^^^^^^^^


Error ---------------------------------------------------------------------------------------------------- test.js:157:7

This condition is truthy. [constant-condition]

   157|   if ((('a'?2:3)?4:5)?6:7) {} // ERROR
              ^^^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------------------- test.js:157:8

This condition is truthy. [constant-condition]

   157|   if ((('a'?2:3)?4:5)?6:7) {} // ERROR
               ^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------------------- test.js:157:9

This condition is truthy. [constant-condition]

   157|   if ((('a'?2:3)?4:5)?6:7) {} // ERROR
                ^^^


Error ---------------------------------------------------------------------------------------------------- test.js:157:9

This condition is truthy. [constant-condition]

   157|   if ((('a'?2:3)?4:5)?6:7) {} // ERROR
                ^^^^^^^


Error ---------------------------------------------------------------------------------------------------- test.js:158:7

This condition is truthy. [constant-condition]

   158|   if (((true?2:3)?4:5)?6:7) {} // ERROR
              ^^^^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------------------- test.js:158:8

This condition is truthy. [constant-condition]

   158|   if (((true?2:3)?4:5)?6:7) {} // ERROR
               ^^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------------------- test.js:158:9

This condition is truthy. [constant-condition]

   158|   if (((true?2:3)?4:5)?6:7) {} // ERROR
                ^^^^^^^^


Error ---------------------------------------------------------------------------------------------------- test.js:159:7

This condition is truthy. [constant-condition]

   159|   if (((false?2:3)?4:5)?6:7) {} // ERROR
              ^^^^^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------------------- test.js:159:8

This condition is truthy. [constant-condition]

   159|   if (((false?2:3)?4:5)?6:7) {} // ERROR
               ^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------------------- test.js:159:9

This condition is truthy. [constant-condition]

   159|   if (((false?2:3)?4:5)?6:7) {} // ERROR
                ^^^^^^^^^


Error ---------------------------------------------------------------------------------------------------- test.js:160:7

This condition is truthy. [constant-condition]

   160|   if (((('a'?2:3)?4:5)?6:7)?8:9) {} // ERROR
              ^^^^^^^^^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------------------- test.js:160:8

This condition is truthy. [constant-condition]

   160|   if (((('a'?2:3)?4:5)?6:7)?8:9) {} // ERROR
               ^^^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------------------- test.js:160:9

This condition is truthy. [constant-condition]

   160|   if (((('a'?2:3)?4:5)?6:7)?8:9) {} // ERROR
                ^^^^^^^^^^^^^


Error --------------------------------------------------------------------------------------------------- test.js:160:10

This condition is truthy. [constant-condition]

   160|   if (((('a'?2:3)?4:5)?6:7)?8:9) {} // ERROR
                 ^^^


Error --------------------------------------------------------------------------------------------------- test.js:160:10

This condition is truthy. [constant-condition]

   160|   if (((('a'?2:3)?4:5)?6:7)?8:9) {} // ERROR
                 ^^^^^^^


Error ---------------------------------------------------------------------------------------------------- test.js:161:7

This condition is truthy. [constant-condition]

   161|   if ((((true?2:3)?4:5)?6:7)?8:9) {} // ERROR
              ^^^^^^^^^^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------------------- test.js:161:8

This condition is truthy. [constant-condition]

   161|   if ((((true?2:3)?4:5)?6:7)?8:9) {} // ERROR
               ^^^^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------------------- test.js:161:9

This condition is truthy. [constant-condition]

   161|   if ((((true?2:3)?4:5)?6:7)?8:9) {} // ERROR
                ^^^^^^^^^^^^^^


Error --------------------------------------------------------------------------------------------------- test.js:161:10

This condition is truthy. [constant-condition]

   161|   if ((((true?2:3)?4:5)?6:7)?8:9) {} // ERROR
                 ^^^^^^^^


Error ---------------------------------------------------------------------------------------------------- test.js:162:7

This condition is truthy. [constant-condition]

   162|   if ((((false?2:3)?4:5)?6:7)?8:9) {} // ERROR
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------------------- test.js:162:8

This condition is truthy. [constant-condition]

   162|   if ((((false?2:3)?4:5)?6:7)?8:9) {} // ERROR
               ^^^^^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------------------- test.js:162:9

This condition is truthy. [constant-condition]

   162|   if ((((false?2:3)?4:5)?6:7)?8:9) {} // ERROR
                ^^^^^^^^^^^^^^^


Error --------------------------------------------------------------------------------------------------- test.js:162:10

This condition is truthy. [constant-condition]

   162|   if ((((false?2:3)?4:5)?6:7)?8:9) {} // ERROR
                 ^^^^^^^^^


Error ----------------------------------------------------------------------------------------------- typed_check.js:6:7

This condition is likely falsy.
[WARNING]: Flow's type inference may be incorrect that it could be null at runtime (due to `any` annotations,
out-of-bounds array accesses, etc.). If the check is valid, you might want to make [1] nullable (`T` -> `?T`).
[constant-condition]

   typed_check.js:6:7
   6|   if (x2) {} // ERROR, falls to SingletonStrT
            ^^

References:
   typed_check.js:5:12
   5|   let x2 = '' as const
                 ^^ [1]


Error ---------------------------------------------------------------------------------------------- typed_check.js:11:9

This condition is likely falsy.
[WARNING]: Flow's type inference may be incorrect that it could be null at runtime (due to `any` annotations,
out-of-bounds array accesses, etc.). If the check is valid, you might want to make [1] nullable (`T` -> `?T`).
[constant-condition]

   typed_check.js:11:9
   11|     if (x3) {} // ERROR, refined, falsy, falls to SingletonStrT
               ^^

References:
   typed_check.js:8:11
    8|   let x3: string = 'avuyv'
                 ^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------- typed_check.js:15:9

This condition is likely truthy.
[WARNING]: Flow's type inference may be incorrect that it could be null at runtime (due to `any` annotations,
out-of-bounds array accesses, etc.). If the check is valid, you might want to make [1] nullable (`T` -> `?T`).
[constant-condition]

   typed_check.js:15:9
   15|     if (x3) {} // ERROR we don't know what this is
               ^^

References:
   typed_check.js:8:11
    8|   let x3: string = 'avuyv'
                 ^^^^^^ [1]


Error --------------------------------------------------------------------------------------------- typed_check.js:120:8

This condition is likely truthy.
[WARNING]: Flow's type inference may be incorrect that it could be null at runtime (due to `any` annotations,
out-of-bounds array accesses, etc.). If the check is valid, you might want to make [1] nullable (`T` -> `?T`).
[constant-condition]

   typed_check.js:120:8
   120|     if(x1) {} // error, truthy
               ^^

References:
   typed_check.js:118:11
   118|   let x1: number = 6;
                  ^^^^^^ [1]


Error --------------------------------------------------------------------------------------------- typed_check.js:124:9

This condition is likely falsy.
[WARNING]: Flow's type inference may be incorrect that it could be null at runtime (due to `any` annotations,
out-of-bounds array accesses, etc.). If the check is valid, you might want to make [1] nullable (`T` -> `?T`).
[constant-condition]

   typed_check.js:124:9
   124|     if (x1) {} // error, falsy
                ^^

References:
   typed_check.js:118:11
   118|   let x1: number = 6;
                  ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------------- unary_not.js:2:8

This condition is falsy. [constant-condition]

   2|     if(!'afa') {} // ERROR -> falsy
             ^^^^^^


Error ------------------------------------------------------------------------------------------------- unary_not.js:9:8

This condition is truthy. [constant-condition]

   9|     if(a ? 'afa' : 5) {} // ERROR -> truthy
             ^^^^^^^^^^^^^


Error ------------------------------------------------------------------------------------------------ unary_not.js:10:8

This condition is falsy. [constant-condition]

   10|     if(a ? !'afa' : !5) {} // ERROR -> falsy
              ^^^^^^^^^^^^^^^


Error ------------------------------------------------------------------------------------------------ unary_not.js:12:5

This condition is truthy. [constant-condition]

   12|     'afa' && a; // ERROR -> truthy
           ^^^^^


Error ------------------------------------------------------------------------------------------------ unary_not.js:13:6

This condition is falsy. [constant-condition]

   13|     (!'afa') && a; // ERROR -> falsy
            ^^^^^^


Error ------------------------------------------------------------------------------------------------ unary_not.js:15:5

This condition is truthy. [constant-condition]

   15|     'afa' || a; // ERROR -> truthy
           ^^^^^


Error ------------------------------------------------------------------------------------------------ unary_not.js:16:6

This condition is falsy. [constant-condition]

   16|     (!'afa') || a; // ERROR -> falsy
            ^^^^^^


Error ------------------------------------------------------------------------------------------------ unary_not.js:18:5

This condition is truthy. [constant-condition]

   18|     'afa' ?? a; // ERROR -> truthy
           ^^^^^


Error ------------------------------------------------------------------------------------------------ unary_not.js:19:6

This condition is falsy. [constant-condition]

   19|     (!'afa') ?? a; // ERROR -> falsy
            ^^^^^^


Error ------------------------------------------------------------------------------------------------ unary_not.js:24:8

This condition is falsy. [constant-condition]

   24|     if(!!!'afa') {} // ERROR -> falsy
              ^^^^^^^^


Error ------------------------------------------------------------------------------------------------ unary_not.js:31:8

This condition is falsy. [constant-condition]

   31|     if(!(a ? !!'afa' : !!5)) {} // ERROR -> falsy
              ^^^^^^^^^^^^^^^^^^^^


Error ------------------------------------------------------------------------------------------------ unary_not.js:32:8

This condition is falsy. [constant-condition]

   32|     if(a ? !!!!!!!'afa' : !!!5) {} // ERROR -> falsy
              ^^^^^^^^^^^^^^^^^^^^^^^


Error ------------------------------------------------------------------------------------------------ unary_not.js:34:5

This condition is truthy. [constant-condition]

   34|     'afa' && a; // ERROR -> truthy
           ^^^^^


Error ------------------------------------------------------------------------------------------------ unary_not.js:35:6

This condition is falsy. [constant-condition]

   35|     (!!!'afa') && a; // ERROR -> falsy
            ^^^^^^^^


Error ------------------------------------------------------------------------------------------------ unary_not.js:37:5

This condition is truthy. [constant-condition]

   37|     'afa' || a; // ERROR -> truthy
           ^^^^^


Error ------------------------------------------------------------------------------------------------ unary_not.js:38:6

This condition is falsy. [constant-condition]

   38|     (!!!!!!!'afa') || a; // ERROR -> falsy
            ^^^^^^^^^^^^


Error ------------------------------------------------------------------------------------------------ unary_not.js:40:5

This condition is truthy. [constant-condition]

   40|     'afa' ?? a; // ERROR -> truthy
           ^^^^^


Error ------------------------------------------------------------------------------------------------ unary_not.js:41:6

This condition is falsy. [constant-condition]

   41|     (!!!!!!!!!!!'afa') ?? a; // ERROR -> falsy
            ^^^^^^^^^^^^^^^^



Found 137 errors
